2014-11-27  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 7.0.7.

2014-11-27  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 7.0.6 release.

	* CHANGES: Updated.

2014-11-10  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* bse/settings.c (settings_init_from_file): Fix memory leak on error.

2014-11-10  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/nvti.c (nvti_shrink): Nullify freed nvti elements to prevent
	double-free errors.

	* base/nvticache.h: Export nvticache_free() prototype.

2014-11-04  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 7.0.6.

2014-11-04  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 7.0.5 release.

	* CHANGES: Updated.

2014-11-03  Michael Wiegand <michael.wiegand@greenbone.net>

	Backport r20754.

	* nasl/nasl_smb.c (nasl_win_cmd_exec): Make sure "cmd" variable is
	not empty before attempting query. Patch provided by Thanga Prakash.

2014-07-17  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r19876.

	* omp/omp.c (omp_get_tasks_ext): Add filter option.  Remove actions.

	* omp/omp.h (omp_get_tasks_opts_t): Add "filter" option.
	(omp_get_tasks_opts_defaults): Init filter.

2014-10-17  Michael Wiegand <michael.wiegand@greenbone.net>

	The required minimum version for the GnuTLS library has actually been
	2.12 since OpenVAS Libraries 7.0.0. Adjust documentation and checks
	accordingly.

	* INSTALL: Update prerequisites.

	* CMakeLists: Adjust minimum version in gnutls check.

2014-10-07  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r20534.

	Make the manager response buffer a local variable of
	try_read_entity_and_string to avoid overwriting by concurrent threads.

	* omp/xml.c (buffer_start, buffer_point, buffer_end): Remove.
	(try_read_entity_and_string): Add buffer_start and buffer_end as local